--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 deepspeech==0.9.3
 pandas==1.5.1
 torch==1.11.0
+torchvision==0.12.0
+torchaudio==0.11.0
+torchtext==0.12.0
 pyannote.audio==2.0.1
 pydeepspeech==1.1.7
 speechbrain==0.5.12
